--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "email": "me@seth-holladay.com"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "xo"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,9 @@
   "bugs": {
     "url": "https://github.com/sholladay/os-proxy-cli/issues",
     "email": "me@seth-holladay.com"
+  },
+  "engines": {
+    "node": ">=6"
   },
   "license": "MPL-2.0",
   "bin": {
@@ -33,6 +36,10 @@
     "meow": "3.7.0",
     "os-proxy": "0.6.0"
   },
+  "devDependencies": {
+    "eslint-config-tidy": "0.3.0",
+    "xo": "0.16.0"
+  },
   "keywords": [
     "cli-app",
     "cli",
@@ -41,5 +48,8 @@
     "proxy",
     "configuration",
     "config"
-  ]
+  ],
+  "xo": {
+    "extend": "tidy"
+  }
 }
